# Vision-Based-Desktop-Automation

./: .gitignore  INSTALL.md  README.md  generate_detection_screenshots.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  api_client.py  automation.py  icon_detector.py  main.py  utils.py
tests/: test_detection.py
